package model

import (
	"time"

	"gorm.io/gorm"
)

func OrderMigrate(db *gorm.DB) error {
	return db.AutoMigrate(&Order{}, &OrderMenuVariation{}, &OrderStatusLog{})
}

var OrderStatus = struct {
	ToPay    string
	Paid     string
	Canceled string
}{ToPay: "to_pay", Paid: "paid", Canceled: "canceled"}

type Order struct {
	ID          uint      `gorm:"primaryKey" json:"id"`
	OrderNumber string    `gorm:"uniqueIndex;type:text" json:"order_number"`
	Status      string    `gorm:"type:text" json:"status"`
	Customer    string    `gorm:"type:text;default:guest" json:"customer"`
	Total       float64   `json:"total"`
	CreatedAt   time.Time `gorm:"autoCreateTime" json:"created_at"`
	UpdatedAt   time.Time `gorm:"autoUpdateTime" json:"updated_at"`
	EmployeeID  *uint     `json:"employee_id"`
	MemberID    *uint     `gorm:"index" json:"member_id"`

	// Relation to OrderStatusLog
	StatusLogs          []OrderStatusLog     `gorm:"foreignKey:OrderID" json:"status_logs"`
	OrderMenuVariations []OrderMenuVariation `gorm:"foreignKey:OrderID" json:"order_menu_variations"`
	Employee            *Employee            `gorm:"constraint:OnUpdate:CASCADE,OnDelete:SET NULL;foreignKey:EmployeeID;references:ID" json:"employee"`
	Member              *Member              `gorm:"constraint:OnUpdate:CASCADE,OnDelete:SET NULL;foreignKey:MemberID;references:ID" json:"member,omitempty"`
}

type OrderStatusLog struct {
	ID        uint      `gorm:"primaryKey" json:"id"`
	OrderID   uint      `json:"order_id"`
	Status    string    `gorm:"type:text" json:"status"`
	CreatedAt time.Time `gorm:"autoCreateTime" json:"created_at"`
}

type OrderMenuVariation struct {
	ID              uint    `gorm:"primaryKey" json:"id"`
	OrderID         uint    `json:"order_id"`
	MenuVariationID uint    `json:"menu_variation_id"`
	Amount          int     `json:"amount"`
	Price           float64 `json:"price"`

	// Associations
	MenuVariation *MenuVariation `gorm:"foreignKey:MenuVariationID" json:"menu_variation,omitempty"`
}
